# c

EX1/: CMakeLists.txt  main.c
EX2/: CMakeLists.txt  main.c
EX5/: CMakeLists.txt
EX6/: CMakeLists.txt
HW1/q1/: CMakeLists.txt  a.out  program.c
HW1/q1/headers/: utils.h
HW1/q1/source/: checkIndices.c  createNumByIdx.c  createNumByReverseIdx.c  findLength.c  getDigit.c  getNumAndCheckValidation.c  getReverseDigit.c
HW2/: CMakeLists.txt
HW5/: CMakeLists.txt
HW5/ex1/: ex1.docx
HW5/ex1/ex1.3/: program.c
HW5/ex2/: program.c
HW5/ex3/: addElm.c  program.c  struct.h
HW5/ex4/: program.c  struct.h
HW5/ex5/ex5.1/: program.c
HW5/ex5/ex5.2/: program.c
TestPrep/: CMakeLists.txt  main.c
TestPrep/C-29-05-2016-Linked-list-pointers-struct- רשימות מקושרות/C-29-05-2016-Linked-list-pointers-struct/first2_get_max_element_in_list_or_length/first/: first.sdf
TestPrep/C-29-05-2016-Linked-list-pointers-struct- רשימות מקושרות/C-29-05-2016-Linked-list-pointers-struct/first2_get_max_element_in_list_or_length/first/first/: list.c
TestPrep/C-29-05-2016-Linked-list-pointers-struct- רשימות מקושרות/C-29-05-2016-Linked-list-pointers-struct/first3_sort_linked_list/first/first/: first.vcxproj  list.c  list.h
TestPrep/C-29-05-2016-Linked-list-pointers-struct- רשימות מקושרות/C-29-05-2016-Linked-list-pointers-struct/first_linked_list/first/: first.sdf  first.sln
TestPrep/DynamicMemory/: prototype.c  test.c
TestPrep/Ellipses/: ellipses.c
TestPrep/Lists/: list.c  list.h  main.c  sum_route.c
TestPrep/Pointers/: char_array.c  pointer_to_functions.c  simpleDoublePointer.c
(+103 files in other folders)
